0.0.5 / 2015-07-16

* Enhancements

  * Can now do single-line addresses with glob: true

0.0.4 / 2015-06-02

* Enhancements

  * Depend on new fixed version of smartystreets geocoder module

0.0.3 / 2015-03-27

* Enhancements

  * Respect ENV['DATABASE_URL'] instead of expecting `psql DBNAME` to always work
  * Require a good version of https://www.npmjs.com/package/smartystreets to be installed
  * More resistant to postcodes like 5753 (aka 05753), 53703.0, and even 5753.0

0.0.2 / 2015-01-23

* Enhancements

  * bin/geocode_records table_name - extremely basic CLI

0.0.1 / 2015-01-23

initial release!